--- a/15-Godiva.tex
+++ b/15-Godiva.tex
@@ -2,7 +2,8 @@
 
 \diva can be used to produce climatologies for a given variable in an oceanic basin. In this case \diva 3D tools are used to produce for successive climatological time periods, 3D climatological analyses on the basin. The resulting climatologies are gathered in 4D binary files GHER format and NetCDF.
 
-The working directory to performs 4D-analyses is: \directory{GODIVA\_mm\_yyyy/JRAx/Climatology}.
+The working directory to performs 4D-analyses is:\\ 
+\directory{GODIVA\_mm\_yyyy/JRAx/Climatology}.
 
 \minitoc
 
