--- a/14-DivaOnWeb.tex
+++ b/14-DivaOnWeb.tex
@@ -10,9 +10,9 @@ In addition to the usual way of working with \diva (i.e., command line), there a
 \section{\diva-on-web}
 %---------------------
 
-The idea behind \diva-on-web is to provide the possibility to user to perform interpolations with \diva without having to install it on their machine. The web interface suits to a single analysis with a relatively low number of data. For climatologies, which requires the repetition of numerous analysis, the use of \diva is necessary.
+The idea behind \diva-on-web is to provide the possibility for the users to perform interpolations with \diva without having to install it on their machine. The web interface suits to a single analysis with a relatively low number of data. For climatologies, which requires the repetition of numerous analysis, the use of \diva is necessary.
 
-The server is accessible at: \url{http://gher-diva.phys.ulg.ac.be/web-vis/diva.html} and a complete description is found in \citet{BARTH10}.
+The server is accessible at: \url{http://gher-diva.phys.ulg.ac.be/web-vis/diva.html} and a complete description of the interface is found in \citet{BARTH10}.
 
 
 \subsection{Implementation}
@@ -21,9 +21,9 @@ The web interface of \diva is based on OpenLayer (\url{http://openlayers.org/}) 
 
 \begin{figure}[htpb]
 	\centering
-	\parbox{.5\textwidth}{
-		\includegraphics[width=.475\textwidth]{diva_on_web_paper1}
-		}\parbox{.5\textwidth}{
+	\parbox{.55\textwidth}{
+		\includegraphics[width=.525\textwidth]{diva_on_web_paper1}
+		}\parbox{.45\textwidth}{
 		\caption{Communications between the server and the client for analysis with \diva-on-web.\label{fig:diva_on_web_paper1}}
 		}
 \end{figure}
@@ -75,7 +75,7 @@ The outputs are available in various formats (Fig.~\ref{fig:divaonweb6}): NetCDF
 \begin{figure}[H]
 \centering 
 \includegraphics[width=.5\textwidth]{divaonweb6}
-\caption{\label{fig:divaonweb6}}
+\caption{Exportation of the result field in different formats.\label{fig:divaonweb6}}
 \end{figure}
 
 
@@ -106,11 +106,13 @@ Ocean Data View \citep[ODV,][]{SCHLITZER02} is a tool for the analysis and visua
 \caption{Example of VG gridding and \diva gridding with ODV (from \citet{SCHLITZER12}).\label{fig:divaodv}}
 \end{figure}
 
+\diva gridding is a simplified version of \diva implemented inside ODV, where the user can only modify a limited number of parameters.
+
 \section{Matlab toolbox}
 %------------------------
 
 \index{Matlab}
-The \diva Matlab toolbox is an interface to perform 2-D analysis without having to compile the whole code and to type command in a shell. 
+The \diva Matlab toolbox is an interface to perform 2-D analysis without having to compile the whole code and to type commands in a terminal. 
 
 \subsection{Installation}
 %------------------------
@@ -143,7 +145,7 @@ The structure is the following:
 \end{lstlisting}
 
 The main file is \file{divagrid.m}, while \file{testdivagrid.m} provides a few example of how the function can be used.
-Directories \directory{linux\_binaries} and \directory{windows\_binaries}
+Directories \directory{linux\_binaries} and \directory{windows\_binaries} 
  %%%%%%%%%%%%%%%% to continue here
  
 \subsection{Usage}
